--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Denis Sebastian Abad Santos -2021374</h2>
     <h2>Francisco Javier Leiva Palma - 2021651</h2>
     <h2>Rodrigo Emmanuel Díaz García  -  2022178</h2>
+    <h2>Hans Alexander Juárez - 2019128</h2>
 </body>
 </html>
