Se agregó en H1 nombre del Profesor

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Práctica GIT IN5AM</title>
 </head>
 <body>
-    
+    <h1>Pedro Manuel Armas Chang - 20181518 03092842</h1>
 </body>
 </html>
