--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Pedro Manuel Armas Chang - 20181518 03092842</h1>
+    <h2>Denis Sebastian Abad Santos -2021374</h2>
 </body>
 </html>
