Se modifico el index Francisco Leiva

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Pedro Manuel Armas Chang - 20181518 03092842</h1>
     <h2>Denis Sebastian Abad Santos -2021374</h2>
+    <h2>Francisco Javier Leiva Palma - 2021651</h2>
 </body>
 </html>
