se modifico el archivo index by Rodrigo Díaz

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Pedro Manuel Armas Chang - 20181518 03092842</h1>
     <h2>Denis Sebastian Abad Santos -2021374</h2>
     <h2>Francisco Javier Leiva Palma - 2021651</h2>
+    <h2>Rodrigo Emmanuel Díaz García  -  2022178</h2>
 </body>
 </html>
