Se ha modificado el index Lisandro Lopez

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <h2>Axel Antonio Xitumul Chen - 2022038</h2>
     <h2>Pablo Ernesto Bermudez Tobar - 2022015</h2>>
     <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>
+    <h2>Lisandro Fabricio López Teleguario - 2022167</h2>
 </body>
 </html>
