--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <h2>Pablo Ernesto Bermudez Tobar - 2022015</h2>>
     <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>
     <h2>Lisandro Fabricio López Teleguario - 2022167</h2>
+    <h2>David Fernando Balcárcel Martínez - 2020380</h2>
 </body>
 </html>
