Se modifico el index Jose Molina

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <h2>David Fernando Balcárcel Martínez - 2020380</h2>
     <h2>Jonathan José García Juárez - 2019121</h2>
     <h2>Ricardo Adrián Colindres Franco - 2019169</h2>
+    <h2>Jose Andrés Molina Hinestroza - 2022408</h2>
 </body>
 </html>
