--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Francisco Javier Leiva Palma - 2021651</h2>
     <h2>Rodrigo Emmanuel Díaz García  -  2022178</h2>
     <h2>Hans Alexander Juárez - 2019128</h2>
+    <h2>Juan Carlos Boteo Granados - 2019465</h2>
 </body>
 </html>
