Se ha modificado el index Llanel Escobar

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>Rodrigo Emmanuel Díaz García  -  2022178</h2>
     <h2>Hans Alexander Juárez - 2019128</h2>
     <h2>Juan Carlos Boteo Granados - 2019465</h2>
+    <h2>Llanel Esteban Escobar Recinos - 2019578</h2>
 </body>
 </html>
