Se ha modificado el Index Carlos Altán

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h2>Hans Alexander Juárez - 2019128</h2>
     <h2>Juan Carlos Boteo Granados - 2019465</h2>
     <h2>Llanel Esteban Escobar Recinos - 2019578</h2>
+    <h2>Carlos Daniel Altán Cortez - 2019176</h2>
 </body>
 </html>
