Se ha modificado el index por Carlos de la Cruz

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <h2>Llanel Esteban Escobar Recinos - 2019578</h2>
     <h2>Carlos Daniel Altán Cortez - 2019176</h2>
     <h2>Diego René Estrada Juárez - 2019308</h2>
+    <h2>Carlos Fernando de la Cruz Gómez - 2019262</h2>
 </body>
 </html>
