--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h2>Juan Carlos Boteo Granados - 2019465</h2>
     <h2>Llanel Esteban Escobar Recinos - 2019578</h2>
     <h2>Carlos Daniel Altán Cortez - 2019176</h2>
+    <h2>Diego René Estrada Juárez - 2019308</h2>
 </body>
 </html>
