--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <h2>Carlos Daniel Altán Cortez - 2019176</h2>
     <h2>Diego René Estrada Juárez - 2019308</h2>
     <h2>Carlos Fernando de la Cruz Gómez - 2019262</h2>
+    <h2>Juan Pablo Ángel Yaxón Taquirá - 2019386</h2>
 </body>
 </html>
