Se modifico el index por Santiago González

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <h2>Carlos Fernando de la Cruz Gómez - 2019262</h2>
     <h2>Juan Pablo Ángel Yaxón Taquirá - 2019386</h2>
     <h2>Carlos Manuel Cabrera Velásquez - 2019018</h2>
+    <h2>Santiago Elisardo González Herrera - 2022140</h2>
 </body>
 </html>
