Se ha modificado el index David Godoy

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <h2>Juan Pablo Ángel Yaxón Taquirá - 2019386</h2>
     <h2>Carlos Manuel Cabrera Velásquez - 2019018</h2>
     <h2>Santiago Elisardo González Herrera - 2022140</h2>
+    <h2>Spritwel David Godoy del Cid - 2019268</h2>
 </body>
 </html>
