--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <h2>Santiago Elisardo González Herrera - 2022140</h2>
     <h2>Spritwel David Godoy del Cid - 2019268</h2>
     <h2>Carlos Samuel Armas Cuellar - 2019645</h2>
+    <H2>Carlos Manuel García Escobar - 2022025</H2>
 </body>
 </html>
