--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <h2>Spritwel David Godoy del Cid - 2019268</h2>
     <h2>Carlos Samuel Armas Cuellar - 2019645</h2>
     <H2>Carlos Manuel García Escobar - 2022025</H2>
+    <h2>Antony Daniel López Doren - 2019267</h2>
 </body>
 </html>
