Se modificó archivo index por Alexander González

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <H2>Carlos Manuel García Escobar - 2022025</H2>
     <h2>Antony Daniel López Doren - 2019267</h2>
     <h2>Edwin José Hilarión Coy Patal - 2019518</h2>
+    <h2>Edwin Alexander González García - 2019065</h2>
 </body>
 </html>
