Se modifico el index Edwin Coy

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <h2>Carlos Samuel Armas Cuellar - 2019645</h2>
     <H2>Carlos Manuel García Escobar - 2022025</H2>
     <h2>Antony Daniel López Doren - 2019267</h2>
+    <h2>Edwin José Hilarión Coy Patal - 2019518</h2>
 </body>
 </html>
