se modifico el index Axel Xitumul

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <h2>Antony Daniel López Doren - 2019267</h2>
     <h2>Edwin José Hilarión Coy Patal - 2019518</h2>
     <h2>Edwin Alexander González García - 2019065</h2>
+    <h2>Axel Antonio Xitumul Chen - 2022038</h2>
 </body>
 </html>
