Se modifico el Index Pablo Bermudez

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <h2>Edwin José Hilarión Coy Patal - 2019518</h2>
     <h2>Edwin Alexander González García - 2019065</h2>
     <h2>Axel Antonio Xitumul Chen - 2022038</h2>
+    <h2>Pablo Ernesto Bermudez Tobar - 2022015</h2>>
 </body>
 </html>
