Se ha modificado el index - Joshua Realiquez

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <h2>Edwin Alexander González García - 2019065</h2>
     <h2>Axel Antonio Xitumul Chen - 2022038</h2>
     <h2>Pablo Ernesto Bermudez Tobar - 2022015</h2>>
+    <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>
 </body>
 </html>
