Se modifico el index Jonathan Garcia

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>
     <h2>Lisandro Fabricio López Teleguario - 2022167</h2>
     <h2>David Fernando Balcárcel Martínez - 2020380</h2>
+    <h2>Jonathan José García Juárez - 2019121</h2>
 </body>
 </html>
