Se ha modificado el index Cesar Vega

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <h2>Jonathan José García Juárez - 2019121</h2>
     <h2>Ricardo Adrián Colindres Franco - 2019169</h2>
     <h2>Jose Andrés Molina Hinestroza - 2022408</h2>
+    <h2>Cesar Javier Arnoldo Vega Ortega - 2022244</h2>
+
 </body>
 </html>
