Se modificó archivo index por Omar Castillo 2021185

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <h2>Ricardo Adrián Colindres Franco - 2019169</h2>
     <h2>Jose Andrés Molina Hinestroza - 2022408</h2>
     <h2>Cesar Javier Arnoldo Vega Ortega - 2022244</h2>
-
+    <h2>Omar Alexander Castillo Calderón - 2021185</h2>
 </body>
 </html>
