--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <h2>Cesar Javier Arnoldo Vega Ortega - 2022244</h2>
     <h2>Omar Alexander Castillo Calderón - 2021185</h2>
     <h2>Brener Roberto Valladares Chián - 2022112 </h2>
+    <h2>Christian Emanuel Itzep Lemus - 2019528</h2>
 </body>
 </html>
