--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <h2>Jose Andrés Molina Hinestroza - 2022408</h2>
     <h2>Cesar Javier Arnoldo Vega Ortega - 2022244</h2>
     <h2>Omar Alexander Castillo Calderón - 2021185</h2>
+    <h2>Brener Roberto Valladares Chián - 2022112 </h2>
 </body>
 </html>
