Se ha modificado el index Diego Zabala

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <h2>Omar Alexander Castillo Calderón - 2021185</h2>
     <h2>Brener Roberto Valladares Chián - 2022112 </h2>
     <h2>Christian Emanuel Itzep Lemus - 2019528</h2>
+    <h2>Deigo Estuardo Zabala Toc - 2019001</h2>
 </body>
 </html>
