Se modificó el archivo index Manuel González

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     <h2>Brener Roberto Valladares Chián - 2022112 </h2>
     <h2>Christian Emanuel Itzep Lemus - 2019528</h2>
     <h2>Deigo Estuardo Zabala Toc - 2019001</h2>
+    <h2>Manuel Eduardo González Avalos - 2021391</h2>
 </body>
 </html>
