Se modificó el index Gabriel Ortiz

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <h2>Christian Emanuel Itzep Lemus - 2019528</h2>
     <h2>Deigo Estuardo Zabala Toc - 2019001</h2>
     <h2>Manuel Eduardo González Avalos - 2021391</h2>
+    <h2>Jonathan Gabriel Guzman Ortiz - 2019642</h2>
 </body>
 </html>
