--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <h2>Deigo Estuardo Zabala Toc - 2019001</h2>
     <h2>Manuel Eduardo González Avalos - 2021391</h2>
     <h2>Jonathan Gabriel Guzman Ortiz - 2019642</h2>
+    <h2>Emerson Eduardo Hernandez Silva - 2019337</h2>
 </body>
 </html>
